src/tests/fixtures/subscriptions/SubscriptionClassWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class Subscription {
  /** @gqlField */
  async *greetings(): AsyncIterable<string> {
    yield "Hello";
    yield "World";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/SubscriptionClassWithAsyncIterable.invalid.ts:2:14 - error: Operation types `Query`, `Mutation`, and `Subscription` must be defined as type aliases of `unknown`. E.g. `type Query = unknown`.

2 export class Subscription {
               ~~~~~~~~~~~~
